# cerebral-hemodynamics-aspiration

./: LICENSE  README.md  adaptive_stabilization.py  requirements.txt  setup.py
cerebral-hemodynamics-aspiration/: .gitignore  LICENSE  README.md  plot_aspiration_results.py  pyproject.toml
cerebral-hemodynamics-aspiration/aspiration_study/: __init__.py  test_cases.py
cerebral-hemodynamics-aspiration/gadda_model/: README.md  aspiration.py  equations.py
cerebral-hemodynamics-aspiration/gadda_validation/: __init__.py  model_validation_reproduction.py  sensitivity_analysis.py  supine_upright.py
gadda_model/: README.md  __init__.py  parameters.py  solver.py
gadda_validation/: stenosis_patterns.py
