[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebral_hemodynamics_aspiration"
version = "1.0.0"
description = "Computational model of cerebral hemodynamics with venous aspiration for intracranial pressure regulation."
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Adisu Mengesha Assefa", email = "aassefa@unomaha.edu" }
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.3",
    "pandas>=1.3"
]

# Optional classification for professionalism
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
Homepage = "https://github.com/Adisu4/cerebral-hemodynamics-aspiration"
Repository = "https://github.com/Adisu4/cerebral-hemodynamics-aspiration"
Issues = "https://github.com/Adisu4/cerebral-hemodynamics-aspiration/issues"

[tool.setuptools]
packages = ["gadda_model", "gadda_validation", "aspiration_study"]
